css/styles.css
body{
    font: 15px helvetica,arial,freesans,clean,sans-serif;
    margin: 20px auto;    
    text-align: center;
    background-color: #000;
    color: #fff;
    margin: 20px;
}

region.wavesurfer-region:before {
    background-color: #979797;
    padding: 4px;
    content: attr(data-region-label);
    position: absolute;
    font-size: 20px;
    bottom: -15px;
    left: 0px;
    z-index: 998;
    white-space: pre;
    display: inline-block;
    text-shadow:
        0.05em 0 black,
        0 0.05em black,
        -0.05em 0 black,
        0 -0.05em black,
        -0.05em -0.05em black,
        -0.05em 0.05em black,
        0.05em -0.05em black,
        0.05em 0.05em black;
}


#waveform{
    background: #444444cc;
    margin-bottom: -10px;
}
#waveform-overview{
    background: #444444cc;
    margin-bottom: 10px;
}

#waveform-timeline{
    margin-bottom: 10px;
}

#slider{
    display: block;
    margin: 0 auto;
    margin-top: 20px;
    min-width: 300px;
    max-width: 500px;
}

region[data-id="overviewRegion"] {
    z-index: 999 !important;
}

cursor {
    z-index: 999 !important;
}

#waveform .wavesurfer-region{
    height: calc(100% - 15px) !important; 
    /* top: 10px !important; */
}

#waveform > wave {
    height: 100px !important;
}

#waveform-overview > wave {
    height: 50px !important;
}

timeline {
    margin-top: 20px;
}

.green{
    color: #38edac;
}

.results{
    text-align: start;
    margin: 10px;
}

.infoDiv {
    margin-top: 4px;
    font-weight: bold;
    color: #ee028b;
}

.wordDiv{
    margin-bottom: 8px;
    margin-right: 8px;
    display: inline-block;
    box-sizing: border-box;
    cursor: pointer;
}

.word{
    color: #FFFFFF;
}

.punctuation{
    color: #38edac;
}

.container{
    position: relative;
    width: 100%;
    display: block;
    height: 310px;
}

#loading{
    background-color: #000000AA;
    color: #38edac;
    position: absolute;
    top: 0px;
    left: 0px;
    width: 100%;
    height: 300px;
    z-index: 1000;
    text-align: center;
    margin: auto;
}

.loading_text{
    margin-top: 140px;
}

#waves{
    position: absolute;
    top: 0px;
    left: 0px;
    width: 100%;
}

.neutral{
    color: #0f0;
}

.positive{
    color: #ff0;
}

.negative{
    color: #f00;
}

#speaker_1{
    color: #f00;
}

#speaker_2{
    color: #0f0;
}

#speaker_3{
    color: #00f;
}

#speaker_4{
    color: #ff0;
}

#speaker_5{
    color: #f0f;
}

#speaker_6{
    color: #0ff;
}

#speaker_7{
    color: #f80;
}

#speaker_8{
    color: #08f;
}

#speaker_9{
    color: #f08;
}

#speaker_10{
    color: #80f;
}

.info{
    background-color: #FFFF0088;
}

.warning{
    background-color: #FF880088;
}

.error{
    background-color: #FF000088;
}

.pressed {
    filter: saturate(20);
}

.controls{
    text-align: center;
    border: solid 1px #999;
    border-radius: 10px;
    height: 40px;
    width: 140px;
    margin: auto;
    padding: 8px;
    margin-top: 10px;
}

.params{
    margin-bottom: 10px;
}

.params > input[type="text"]{
    width: 600px;
}

#play{
    margin-right: 30px;
}

.settings{
    display: flex;
    align-items: center;
    justify-content: center;
    margin: auto 1.5em;
    vertical-align: top;
}

.settings:after {
    clear: both;
}

.setting > input[type="text"] {
    float: right;
    height: 10px;
}

.setting{
    display: block;
}

.section{
    border: solid 1px #999;
}

h3{
    margin-top: 0px;
}

.first, .second, .third, .fourth, .fifth {
    display: inline-block;
    width: 15%;
    color: white;
    padding: 10px;
    height: 150px;
    min-height: 150px;
    text-align: start;
}

 .first, .second, .third, .fourth {
    margin-right: 10px;
}

pre {
    overflow-x: auto;
    white-space: pre-wrap;
    word-wrap: break-word;
    font-size: 15px;
}

.paragraphs{
    text-align: left;
}

.summary{
    text-align: left;
}

/* Dropzone */
h1 {
  text-align: center;
  margin-bottom: 2rem;
  padding-bottom: 1rem;
  border-bottom: 2px solid lighten(#6583fe, 15%);
  font-size: 1.5rem;
  font-weight: 400;
}
.dropzone {
  border: 0.2rem dashed #1e2c3c;
  padding: 2rem;
  border-radius: 0.25rem;
  text-align: center;
  font-size: 1.5rem;
  transition: 0.25s background-color ease-in-out;
  cursor: pointer;
}

.dropzone-dragging, .dropzone:hover {
    background-color: lighten(#1e2c3c, 28%);
}

.dropzone-input {
    display: none;
}

/* Tabs */
.container--tabs {
	margin: 24px;

	.nav-tabs {
		float: left;
		width: calc(100% - 40px);
		margin: 0;
		list-style-type: none;
		border-bottom: 1px solid #ddd;

		> li {
			float: left;
			margin-bottom: -1px;

			> a {
				float: left;
				margin-right: 2px;
				line-height: 1.42857143;
				padding: 10px;
				border: 1px solid transparent;
				border-radius: 4px 4px 0 0;

				&:hover {
					border-color: #eee #eee #ddd;
				}
			}

			&.active {
				> a,
				> a:hover,
				> a:focus {
					color: #555;
					cursor: default;
					background-color: #fff;
					border: 1px solid #ddd;
					border-bottom-color: transparent;
				}
			}
		}
	}

	.tab-content {
		float: left;
		width: 100%;
		> .tab-pane {
			display: none;
            min-height: 240px;
			&.active {
				display: block;
				padding: 4px;
                border-left: solid 1px #999;
                border-right: solid 1px #999;
                border-bottom: solid 1px #999;
			}
		}
		> .active {
			display: block;
		}
	}

    
}

a{
    color: #fff;
}

